TypedLama/regression/compile_error/test018.lama
fun unexpectedReturn(x :: Int) {
  local arr = [1, 2, 3, {return "hello!"}];
  return arr
}